objects/blng__GLAccount__c.object
<CustomObject>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__GLAccountDescription__c</fullName>
        <label>GL Account Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__GLAccountNumber__c</fullName>
        <label>GL Account Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>GL_Accounts</fullName>
        <columns>NAME</columns>
        <columns>blng__GLAccountNumber__c</columns>
        <columns>blng__GLAccountDescription__c</columns>
        <columns>blng__Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>blng__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>GL Accounts</label>
    </listViews>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Active__c</columns>
        <columns>blng__GLAccountNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GL Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>